2010-09-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-html.el (gnus-html-rescale-image): Fix up typo in rescaling.

2010-09-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-html.el (gnus-article-html): Make work buffer multibyte for
	decoded contents.
	(gnus-html-put-image, gnus-html-rescale-image): Pass `file' argument.

2010-09-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-line-format): Remove %O (moderated) from
	group line format, since it isn't very interesting.

	* gnus-agent.el (gnus-agent-short-article),
	(gnus-agent-long-article): Increase values for these two variables,
	since most people are likely to have more network connection and
	storage than before.

	* gnus.el (gnus-refer-article-method): Change default to 'current.
	When referring an article, the common behaviour is to refer it from the
	current select method, not the native select method.  The chances of
	the native select method having the message in question is rather slim
	these days.

	* gnus-sum.el (gnus-auto-select-subject): Change default to
	`unseen-or-unread'.  I think it's likely that most people want to
	select an unseen article over a previously seen, but unread one.

	* gnus.el (gnus-mode-non-string-length): Change default to 30.  nil
	means that in the article buffer none of the minor mode elements will
	be shown, usually, and this is not desirable in most cases.

	* gnus-sum.el (gnus-summary-goto-unread): Change default to nil, so
	that commands like `d' (and the like) go to the next line in the
	buffer, instead of the next unread article.  I think this is the
	behaviour that is most natural for most users.
	(gnus-single-article-buffer): Change default to nil, so that people can
	have as many article buffers open as they have summary buffer.  I think
	this is the most natural way for the groups to behave.

	* message.el (message-generate-new-buffers): Change default to
	`unsent', so that all new message buffers start their names with the